@@ -1,0 +1,8 @@
+# This is a test about tables
+
+| Head 1 | Head 2 |
+| ------ | ------ |
+| Cell 1 | Cell 2 |
+
+This should probably not be a table.  | even if | it looks | | ------- |
+-------- | | quite | similar | But I'm not sure either.
