@@ -1,0 +1,8 @@
+# THIS IS A TEST ABOUT TABLES
+
+| HEAD 1 | HEAD 2 |
+| ------ | ------ |
+| CELL 1 | CELL 2 |
+
+THIS SHOULD PROBABLY NOT BE A TABLE.  | EVEN IF | IT LOOKS | | ------- |
+-------- | | QUITE | SIMILAR | BUT I'M NOT SURE EITHER.
