@@ -10,11 +10,14 @@ __   __/ _ \|___  |___ \
   \_/  \___(_)_/  |_____|         (unreleased)
 
 TransTractor:
- * Remove one source of supirious error reports when writing files (GitHub's #494) [Mt]
+ * Remove one source of supirious error reports when writing files (GitHub's #494) [Mt].
+
+Markdown:
+ * Treat tables as verbatim paragraphs (GitHub's #496) [Mt].
 
 All scripts:
  * Add an option -w/--width to rewrap text on an arbitrary column (GitHub's #474)
-   [Golubev Alexander]
+   [Golubev Alexander].
 
 po4a main script only:
  * Fix the behavior of --translate-only (GitHub's #482) [Mt & Golubev Alexander].
